include/operators.h

ORTKI_API(ortki::OrtKITensorSeq *) ortki_TreeEnsembleClassifier(ortki::OrtKITensor * X, float* base_values, int base_values_size, long* class_ids, int class_ids_size, long* class_nodeids, int class_nodeids_size, long* class_treeids, int class_treeids_size, float* class_weights, int class_weights_size, long* classlabels_int64s, int classlabels_int64s_size, const char** classlabels_strings, int classlabels_strings_size, long* nodes_falsenodeids, int nodes_falsenodeids_size, long* nodes_featureids, int nodes_featureids_size, float* nodes_hitrates, int nodes_hitrates_size, long* nodes_missing_value_tracks_true, int nodes_missing_value_tracks_true_size, const char** nodes_modes, int nodes_modes_size, long* nodes_nodeids, int nodes_nodeids_size, long* nodes_treeids, int nodes_treeids_size, long* nodes_truenodeids, int nodes_truenodeids_size, float* nodes_values, int nodes_values_size, const char* post_transform);
ORTKI_API(ortki::OrtKITensor *) ortki_TreeEnsembleRegressor(ortki::OrtKITensor * X, const char* aggregate_function, float* base_values, int base_values_size, long n_targets, long* nodes_falsenodeids, int nodes_falsenodeids_size, long* nodes_featureids, int nodes_featureids_size, float* nodes_hitrates, int nodes_hitrates_size, long* nodes_missing_value_tracks_true, int nodes_missing_value_tracks_true_size, const char** nodes_modes, int nodes_modes_size, long* nodes_nodeids, int nodes_nodeids_size, long* nodes_treeids, int nodes_treeids_size, long* nodes_truenodeids, int nodes_truenodeids_size, float* nodes_values, int nodes_values_size, const char* post_transform, long* target_ids, int target_ids_size, long* target_nodeids, int target_nodeids_size, long* target_treeids, int target_treeids_size, float* target_weights, int target_weights_size);
ORTKI_API(ortki::OrtKITensor *) ortki_ZipMap(ortki::OrtKITensor * X, long* classlabels_int64s, int classlabels_int64s_size, const char** classlabels_strings, int classlabels_strings_size);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_Adagrad(ortki::OrtKITensor * R, ortki::OrtKITensor * T, ortki::OrtKITensor * inputs, float decay_factor, float epsilon, float norm_coefficient);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_Adam(ortki::OrtKITensor * R, ortki::OrtKITensor * T, ortki::OrtKITensor * inputs, float alpha, float beta, float epsilon, float norm_coefficient, float norm_coefficient_post);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_Gradient(ortki::OrtKITensor ** Inputs, int input_size, const char** xs, int xs_size, const char* y, const char** zs, int zs_size);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_Momentum(ortki::OrtKITensor * R, ortki::OrtKITensor * T, ortki::OrtKITensor * inputs, float alpha, float beta, const char* mode, float norm_coefficient);