CSharp/OrtKI/Operators.cs

[DllImport("libortki.so")]
private static extern IntPtr ortki_TreeEnsembleClassifier(IntPtr X, float[] base_values, int base_values_size, long[] class_ids, int class_ids_size, long[] class_nodeids, int class_nodeids_size, long[] class_treeids, int class_treeids_size, float[] class_weights, int class_weights_size, long[] classlabels_int64s, int classlabels_int64s_size, String[] classlabels_strings, int classlabels_strings_size, long[] nodes_falsenodeids, int nodes_falsenodeids_size, long[] nodes_featureids, int nodes_featureids_size, float[] nodes_hitrates, int nodes_hitrates_size, long[] nodes_missing_value_tracks_true, int nodes_missing_value_tracks_true_size, String[] nodes_modes, int nodes_modes_size, long[] nodes_nodeids, int nodes_nodeids_size, long[] nodes_treeids, int nodes_treeids_size, long[] nodes_truenodeids, int nodes_truenodeids_size, float[] nodes_values, int nodes_values_size, String post_transform);
[DllImport("libortki.so")]
private static extern IntPtr ortki_TreeEnsembleRegressor(IntPtr X, String aggregate_function, float[] base_values, int base_values_size, long n_targets, long[] nodes_falsenodeids, int nodes_falsenodeids_size, long[] nodes_featureids, int nodes_featureids_size, float[] nodes_hitrates, int nodes_hitrates_size, long[] nodes_missing_value_tracks_true, int nodes_missing_value_tracks_true_size, String[] nodes_modes, int nodes_modes_size, long[] nodes_nodeids, int nodes_nodeids_size, long[] nodes_treeids, int nodes_treeids_size, long[] nodes_truenodeids, int nodes_truenodeids_size, float[] nodes_values, int nodes_values_size, String post_transform, long[] target_ids, int target_ids_size, long[] target_nodeids, int target_nodeids_size, long[] target_treeids, int target_treeids_size, float[] target_weights, int target_weights_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ZipMap(IntPtr X, long[] classlabels_int64s, int classlabels_int64s_size, String[] classlabels_strings, int classlabels_strings_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Adagrad(IntPtr R, IntPtr T, IntPtr inputs, float decay_factor, float epsilon, float norm_coefficient);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Adam(IntPtr R, IntPtr T, IntPtr inputs, float alpha, float beta, float epsilon, float norm_coefficient, float norm_coefficient_post);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Gradient(IntPtr[] Inputs, int input_size, String[] xs, int xs_size, String y, String[] zs, int zs_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Momentum(IntPtr R, IntPtr T, IntPtr inputs, float alpha, float beta, String mode, float norm_coefficient);
}